syntax = "proto3";

option csharp_namespace = "GrpcGreeter";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message Hello {
	string message = 1;
}

enum ResultStatus{
	OK=0;
	FUNCTION_ERROR=1;
	WARNING_ERROR=2;
	SYSTEM_ERROR=3;
}

message HelloReply {
	ResultStatus result_status=1;
	string error_message=2;

	Hello hello = 3;
}
